# zdepth-wasm

./: .gitignore  .gitmodules  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: gh-pages.yml
example/: package.json  pnpm-lock.yaml  vite.config.ts
example/src/: App.tsx  TiffPreview.tsx  ZDepthExample.tsx  useZDepth.ts
scripts/: build.ts
src/: zdepth_api.ts
zdepth_wasm/: CMakeLists.txt
zdepth_wasm/src/: zdepth_wasm.cpp
